# llmwiki-tooling

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Cargo.toml  LICENSE-MIT  README.md  dist.toml  release-plz.toml
.scratch/first-class-link-styles/: map.md
.scratch/first-class-link-styles/issues/: 01-define-unified-internal-link-model.md  02-confirm-github-heading-and-reference-semantics.md  03-define-path-and-fragment-resolution.md  04-define-formatting-invariants.md  05-define-repository-link-style-configuration.md  06-define-links-format-command.md  07-define-link-aware-command-integration.md  08-decide-library-api-compatibility.md  09-define-compatibility-and-migration.md  10-define-agent-and-setup-guidance.md  11-sequence-implementation-and-verification.md
.scratch/first-class-link-styles/research/: github-heading-and-reference-semantics.md
docs/adr/: 0001-route-markdown-rewrites-through-edit-plan.md
sandbox-env/: flake.nix
src/: config.rs  edit_plan.rs  error.rs  example-config.toml  frontmatter.rs  inventory.rs  lib.rs  link_format.rs  link_index.rs  main.rs  markdown_document.rs  markdown_links.rs  mention.rs  page.rs  parse.rs  resolve.rs  splice.rs  walk.rs  wiki.rs
src/cmd/: agent.rs  frontmatter_cmd.rs  init.rs  links.rs  lint.rs  mod.rs  move_page.rs  refs.rs  rename.rs  sections.rs
src/markdown_document/: parse.rs
tests/: cli.rs
